# SuperAdmin3000

./: .coveragerc  .env.example  .gitignore  .pylintrc  Dockerfile  Procfile  README.md  app.py  caldb  codecov.yml  init_local_db.sh  only_schema.sql  pyproject.toml  pytest.ini  requirements.txt  reset-db-sequences.sh  run_robot_tests.sh  schema.sql  tasks.py
.github/workflows/: checks-for-docs.yml  deploy.yml  deploy_to_prod.yml  deploy_to_test.yml  main.yml  test_build.yml
.github/workflows/backup->not-in-use/: deploy.yml  main.yml
Documentation/: Architecture.md  Backend API.md  Deployment.md  ER-diagram.dia  FunctionalScope.md  RestList.md  Structure.dia  SurveyStatus.md  Tests.md  Tooltips.md  User guide.md  UserGuide.md
devdata/: env.json
docs/: docs.md
src/: app.py  config.py  db_queries.py  helper.py  initialize_database.py  views.py  views_obsolete.py
src/logger/: logger.py
src/repositories/: statistic_repository.py  survey_repository.py
src/services/: statistic_service.py  survey_service.py
src/static/: tailwind.config.js
src/templates/: all_surveys.html  backdoor_login.html  components.html  edit.html  edit_survey.html  google_login.html  index.html  layout.html  layout_login.html  login.html  logintest.html  new.html  new_question.html  surveys.html  test.html  testdata.html  testdb.html  testdb_new.html  view_survey.html
src/tests/: conftest.py  helper_test.py  test_app.py  test_config.py
src/views/: home.py  logs.py  statistics.py  surveys.py  temp.py  testi.py
templates/: index.html  test.html
tests/: test_app.py
(+77 files in other folders)
