[tool.poetry]
name = "superadmin3000"
version = "0.1.0"
description = ""
authors = ["ramipiik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
robotframework = "^5.0.1"
robotframework-seleniumlibrary = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
