[tool.poetry]
name = "superadmin3000"
version = "0.1.0"
description = ""
authors = ["ramipiik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
robotframework = "^5.0.1"
robotframework-seleniumlibrary = "^6.0.0"
invoke = "^1.7.1"
gunicorn = "^20.1.0"



[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"
pylint = "^2.15.2"
autopep8 = "^1.7.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
